My Personal Website

--- a/switch/index.html
+++ b/switch/index.html
@@ -22,6 +22,10 @@
 			var dgen = 1;
 			var tme = 0;
 			var tmec = 0;
+			var c1 = 1, c2 = 1;
+			var nc1 = 8, nc2 = 1;
+			var edopen = 0;
+			var c1c = [0, "#feea98", "#fe9a9a", "#ff6699", "#fecc9a", "#b3f76e", "#66b3ff", "#9a9afe", "#fe9ae5"], c2c = [0, "#b1b7c5;"];
 			function check() {
 				var ok = 1;
 				for (i = 1; i <= n; ++i) {
@@ -104,10 +108,10 @@
 				for (i = 1; i <= n; ++i) {
 					for (j = 1; j <= m; ++j) {
 						if (v[i][j] == 1) {
-							document.getElementById("v").innerHTML += "<div class='block pl one' onclick=mmv(" + i + "," + j +")></div>";
+							document.getElementById("v").innerHTML += "<div class='block pl one' style=background-color:" + c1c[c1] + "; onclick=mmv(" + i + "," + j +")></div>";
 						}
 						else {
-							document.getElementById("v").innerHTML += "<div class='block pl zero' onclick=mmv(" + i + "," + j +")></div>";
+							document.getElementById("v").innerHTML += "<div class='block pl zero' style=background-color:" + c2c[c2] + "; onclick=mmv(" + i + "," + j +")></div>";
 						}
 					}
 					document.getElementById("v").innerHTML += "<br>";
@@ -118,10 +122,10 @@
 				for (i = 1; i <= n; ++i) {
 					for (j = 1; j <= m; ++j) {
 						if (a[i][j] == 1) {
-							document.getElementById("a").innerHTML += "<div class='block pl one' onclick=mma(" + i + "," + j +")></div>";
+							document.getElementById("a").innerHTML += "<div class='block pl one' style=background-color:" + c1c[c1] + "; onclick=mma(" + i + "," + j +")></div>";
 						}
 						else {
-							document.getElementById("a").innerHTML += "<div class='block pl zero' onclick=mma(" + i + "," + j +")></div>";
+							document.getElementById("a").innerHTML += "<div class='block pl zero' style=background-color:" + c2c[c2] + "; onclick=mma(" + i + "," + j +")></div>";
 						}
 					}
 					document.getElementById("a").innerHTML += "<br>";
@@ -181,10 +185,10 @@
 				for (i = 1; i <= n; ++i) {
 					for (j = 1; j <= m; ++j) {
 						if (v[i][j] == 1) {
-							document.getElementById("v").innerHTML += "<div class='block pl one' onclick=chg(" + i + "," + j +")></div>";
+							document.getElementById("v").innerHTML += "<div class='block pl one' style=background-color:" + c1c[c1] + "; onclick=chg(" + i + "," + j +")></div>";
 						}
 						else {
-							document.getElementById("v").innerHTML += "<div class='block pl zero' onclick=chg(" + i + "," + j +")></div>";
+							document.getElementById("v").innerHTML += "<div class='block pl zero' style=background-color:" + c2c[c2] + "; onclick=chg(" + i + "," + j +")></div>";
 						}
 					}
 					document.getElementById("v").innerHTML += "<br>";
@@ -195,10 +199,10 @@
 				for (i = 1; i <= n; ++i) {
 					for (j = 1; j <= m; ++j) {
 						if (a[i][j] == 1) {
-							document.getElementById("a").innerHTML += "<div class='block one'></div>";
+							document.getElementById("a").innerHTML += "<div class='block one' style=background-color:" + c1c[c1] + ";></div>";
 						}
 						else {
-							document.getElementById("a").innerHTML += "<div class='block zero'></div>";
+							document.getElementById("a").innerHTML += "<div class='block zero' style=background-color:" + c2c[c2] + ";></div>";
 						}
 					}
 					document.getElementById("a").innerHTML += "<br>";
@@ -206,6 +210,7 @@
 			}
 			function restartg() {
 				tme = 0;
+				edopen = 0;
 				for (i = 1; i <= n; ++i) {
 					for (j = 1; j <= m; ++j) {
 						v[i][j] = vc[i][j];
@@ -228,8 +233,10 @@
 				document.getElementById("entcstcd").innerHTML = "<button class='a' id='entcstcd' onclick=entcstcd()>Enter Grid Code</button>";
 				document.getElementById("getcstcd").innerHTML = "<button class='a' id='getcstcd' onclick=getcstcd()>Get Grid Code</button>";
 				document.getElementById("mapmaker").innerHTML = "<button class='a' id='mapmaker' onclick=mapmaker()>Grid Maker</button>";
+				document.getElementById("chgclr").innerHTML = "<button class='a' id='chgclr' onclick=chgclr()>Color</button>";
 			}
 			function start() {
+				edopen = 0;
 				clearintro();
 				tme = 0;
 				if (done == 0) {
@@ -248,6 +255,7 @@
 				document.getElementById("entcstcd").innerHTML = "<button class='a' id='entcstcd' onclick=entcstcd()>Enter Grid Code</button>";
 				document.getElementById("getcstcd").innerHTML = "<button class='a' id='getcstcd' onclick=getcstcd()>Get Grid Code</button>";
 				document.getElementById("mapmaker").innerHTML = "<button class='a' id='mapmaker' onclick=mapmaker()>Grid Maker</button>";
+				document.getElementById("chgclr").innerHTML = "<button class='a' id='chgclr' onclick=chgclr()>Color</button>";
 				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.";
 				document.getElementById("customdim").innerHTML = "Good Luck, Have Fun!";
 				document.getElementById("customerr").innerHTML = "";
@@ -402,10 +410,12 @@
 					document.getElementById("customerr").innerHTML = " ERROR!";
 				}
 				else {
+					edopen = 1;
 					document.getElementById("start").innerHTML = "";
 					document.getElementById("customdim").innerHTML = "Good Luck, Have Fun!";
 					document.getElementById("customerr").innerHTML = "";
 					document.getElementById("getcstcd").innerHTML = "<button class='a' id='getcstcd' onclick=getcstcd()>Get Grid Code</button>";
+					document.getElementById("chgclr").innerHTML = "<button class='a' id='chgclr' onclick=chgclr()>Color</button>";
 					document.getElementById("desc").innerHTML = "<b>How to use:</b> Click on a square from a grid to change its and its neighbours colour.<br>Click the 'Get Grid Code' button to get the grid code.";
 					n = csn;
 					m = csm;
@@ -427,7 +437,31 @@
 				csm = 1;
 				clearintro();
 				document.getElementById("desc").innerHTML = "<b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.";
-				document.getElementById("customdim").innerHTML = "Choose the size. Each grid must have at least 4 elements. Rows: <select id='selectn' class='b' onchange='customn()'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option><option value='8'>8</option></select> Columns: <select id='selectm' class='b' onchange='customm()'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option><option value='8'>8</option></select> <button id='submitcst' class='b' onclick='startedit()'>Create</button>";
+				document.getElementById("customdim").innerHTML = "Choose the size. Each grid must have at least 4 elements. Rows: <select id='selectn' class='b' onchange='customn()'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option><option value='8'>8</option></select> Columns: <select id='selectm' class='b' onchange='customm()'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option><option value='8'>8</option></select> <button id='submitcst' class='b' onclick='startedit()'>Create</button> <button class='b' onclick='showglhf()'>Close</button>";
+			}
+			function chgclr() {
+				document.getElementById("customdim").innerHTML = "Choose the color of the <button class='c' style='background-color:" + c1c[c1] + "; color:" + c1c[c1] + ";'>.</button> tile. | Color: ";
+				for (var i = 1; i <= nc1; ++i) {
+					if (i != c1) {
+						document.getElementById("customdim").innerHTML += "<button class='c' style='background-color:" + c1c[i] + "; color:" + c1c[i] + ";' onclick='chgcol(" + i + ")'>.</button> ";
+					}
+				}
+				document.getElementById("customdim").innerHTML += "<button class='b' onclick='showglhf()'>Close</button>"
+			}
+			function showglhf() {
+				document.getElementById("customdim").innerHTML = "Good Luck, Have Fun!";
+			}
+			function chgcol(k) {
+				c1 = k;
+				chgclr();
+				if (edopen == 0) {
+					wrt();
+					wrta();
+				}
+				else {
+					mwrtv();
+					mwrta();
+				}
 			}
 		</script>
 	</head>
@@ -452,7 +486,7 @@
 				<div style="clear:both;">
 					<p id="desc" style="height:40px; width:900px"><b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.</p>
 					<p><span id="bf_score" style="font-weight:bold; height:20px;">Moves: <span id="score">-</span></span>&nbsp;|&nbsp;<span id="bf_streak" style="font-weight:bold; height:20px;">Win Streak: <span id="streak">-</span></span>&nbsp;|&nbsp;<span id="bf_size" style="font-weight:bold; height:20px;">Size: <span id="sizen">-</span><span style="font-size:75%;"> x </span><span id="sizem">-</span></span></p>
-					<p style="height:30px;"><span id="intro">Choose the size of the grids, </span><span id = "start"></span> <span id="newg"></span> <span id="entcstcd"><span class="entcstcd" onclick="entcstcd();"><span style="color:#b9bcda; cursor:pointer;">enter a grid code</span></span></span> <span id="intro2"> or </span><span id="getcstcd"></span> <span id="mapmaker"><span class="mapmaker" onclick="mapmaker();"><span style="color:#b9bcda; cursor:pointer;">open the 'Grid Maker'</span></span></span></p>
+					<p style="height:30px;"><span id="intro">Choose the size of the grids, </span><span id = "start"></span> <span id="newg"></span> <span id="entcstcd"><span class="entcstcd" onclick="entcstcd();"><span style="color:#b9bcda; cursor:pointer;">enter a grid code</span></span></span> <span id="intro2"> or </span><span id="getcstcd"></span> <span id="mapmaker"><span class="mapmaker" onclick="mapmaker();"><span style="color:#b9bcda; cursor:pointer;">open the 'Grid Maker'</span></span></span> <span id="chgclr"></span></p>
 					<div><p><button class='a' id="d2x2" onclick=d2x2()>2x2</button> <button id="d3x3" class='a' onclick=d3x3()>3x3</button> <button id="d4x4" class='a' onclick=d4x4()>4x4</button> <button id="d5x5" class='a' onclick=d5x5()>5x5</button> <button id="d6x6" class='a' onclick=d6x6()>6x6</button> <button id="d7x7" class='a' onclick=d7x7()>7x7</button> <button id="d8x8" class='a' onclick=d8x8()>8x8</button> <button id="customset" class='a' onclick=customset()>Custom</button></p></div>
 					<div id="custom_zone" style="height:15px;"><span id="customdim">Good Luck, Have Fun!</span><span id="customerr" style="color:#d24646;font-weight:bold;"></span></div>
 					<div id="credits" class="credits">
