My Personal Website

--- a/inrows/index.html
+++ b/inrows/index.html
@@ -491,6 +491,7 @@
 					<li class="mm item"><a href="../index.html">Tudor Tarniceru</a></li>
 					<li class="mm item"><a href="../switch/index.html">Switch</a></li>
 					<li class="mm active"><a>InRows</a></li>
+					<li class="mm soon" style="float:right;"><a>Blog<sup style="font-size:10px;color:yellow;">Soon</sup></a></li>
 				</ul>
 			</div>
 			<div class="game_zone">
