--- a/switch/index.html
+++ b/switch/index.html
@@ -472,6 +472,7 @@
 					<li class="mm item"><a href="../index.html">Tudor Tarniceru</a></li>
 					<li class="mm active"><a>Switch</a></li>
 					<li class="mm item"><a href="../inrows/index.html">InRows</a></li>
+					<li class="mm soon" style="float:right;"><a>Blog<sup style="font-size:10px;color:yellow;">Soon</sup></a></li>
 				</ul>
 			</div>
 			<div class="game_zone">
