My Personal Website

--- a/switch/index.html
+++ b/switch/index.html
@@ -23,9 +23,9 @@
 			var tme = 0;
 			var tmec = 0;
 			var c1 = 1, c2 = 1;
-			var nc1 = 8, nc2 = 1;
+			var nc1 = 10, nc2 = 1;
 			var edopen = 0;
-			var c1c = [0, "#feea98", "#fe9a9a", "#ff6699", "#fecc9a", "#b3f76e", "#66b3ff", "#9a9afe", "#fe9ae5"], c2c = [0, "#b1b7c5;"];
+			var c1c = [0, "#feea98", "#fecc9a", "#fe9a9a", "#ff6699", "#66b3ff", "#9a9afe", "#fe9ae5", "#b3f76e", "#6ddb3b", "#3bdba5"], c2c = [0, "#b1b7c5;"];
 			function check() {
 				var ok = 1;
 				for (i = 1; i <= n; ++i) {
@@ -472,7 +472,7 @@
 					<li class="mm item"><a href="../index.html">Tudor Tarniceru</a></li>
 					<li class="mm active"><a>Switch</a></li>
 					<li class="mm item"><a href="../inrows/index.html">InRows</a></li>
-					<li class="mm soon" style="float:right;"><a>Blog<sup style="font-size:10px;color:yellow;">Soon</sup></a></li>
+					<li class="mm item menuright" style="float:right;"><a href="../blog/index.html">Blog<sup style="font-size:10px;color:yellow;">New</sup></a></li>
 				</ul>
 			</div>
 			<div class="game_zone">
