--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<li class="active"><a>Tudor Tarniceru</a></li>
 					<li class="item"><a href="switch/index.html">Switch</a></li>
 					<li class="item"><a href="inrows/index.html">InRows</a></li>
-					<li class="soon" style="float:right;"><a>Blog<sup style="font-size:10px;color:yellow;">Soon</sup></a></li>
+					<li class="item menuright" style="float:right;"><a href="blog/index.html">Blog<sup style="font-size:10px;color:yellow;">New</sup></a></li>
 				</ul>
 			</div>
 			<br><br>
@@ -33,8 +33,8 @@
 					<div class="play"><p><a href="inrows/index.html">Play Now</a></p></div>
 				</div>
 				<br>
-				<div class="showcase" id="inrows" style="width:635px; filter:brightness(75%); -webkit-filter:brightness(75%);">
-					<div class="soon"><p><a>Visit the Blog (Coming Soon)</a></p></div>
+				<div class="showcase" id="blog" style="width:635px;">
+					<div class="play"><p><a href="blog/index.html">Visit the Blog</a></p></div>
 				</div>
 			</div>
 			</center>
