--- a/switch/index.html
+++ b/switch/index.html
@@ -4,7 +4,8 @@
 	<head>
 		<link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 		<title>Switch - Tudor Tarniceru</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" id="css" href="style1.css">
+		<script src="../colorscheme.js"></script>
 		<script>
 			var n = 10;
 			var m = 10;
@@ -465,14 +466,15 @@
 			}
 		</script>
 	</head>
-	<body>
+	<body onload="show_color_schemes();">
 		<center>
-			<div style="background-color:black">
+			<div>
 				<ul class="mm">
 					<li class="mm item"><a href="../index.html">Tudor Tarniceru</a></li>
 					<li class="mm active"><a>Switch</a></li>
 					<li class="mm item"><a href="../inrows/index.html">InRows</a></li>
 					<li class="mm item menuright" style="float:right;"><a href="../blog/index.html">Blog<sup style="font-size:10px;color:yellow;">New</sup></a></li>
+					<li class="mm item menuright dropdown" style="float:right;"><a>Color Schemes</a> <div id="color_scheme_list" class="dropdown-content"> </div> </li>
 				</ul>
 			</div>
 			<div class="game_zone">
@@ -487,9 +489,9 @@
 				<div style="clear:both;">
 					<p id="desc" style="height:40px; width:900px"><b>How to play:</b> Click on a square from the left grid to change its and its neighbours colour.<br>Make both grids look the same.</p>
 					<p><span id="bf_score" style="font-weight:bold; height:20px;">Moves: <span id="score">-</span></span>&nbsp;|&nbsp;<span id="bf_streak" style="font-weight:bold; height:20px;">Win Streak: <span id="streak">-</span></span>&nbsp;|&nbsp;<span id="bf_size" style="font-weight:bold; height:20px;">Size: <span id="sizen">-</span><span style="font-size:75%;"> x </span><span id="sizem">-</span></span></p>
-					<p style="height:30px;"><span id="intro">Choose the size of the grids, </span><span id = "start"></span> <span id="newg"></span> <span id="entcstcd"><span class="entcstcd" onclick="entcstcd();"><span style="color:#b9bcda; cursor:pointer;">enter a grid code</span></span></span> <span id="intro2"> or </span><span id="getcstcd"></span> <span id="mapmaker"><span class="mapmaker" onclick="mapmaker();"><span style="color:#b9bcda; cursor:pointer;">open the 'Grid Maker'</span></span></span> <span id="chgclr"></span></p>
+					<p style="height:30px;"><span id="intro">Choose the size of the grids, </span><span id = "start"></span> <span id="newg"></span> <span id="entcstcd"><span class="entcstcd" onclick="entcstcd();"><span class="grid_link">enter a grid code</span></span></span> <span id="intro2"> or </span><span id="getcstcd"></span> <span id="mapmaker"><span class="mapmaker" onclick="mapmaker();"><span style="color:#b9bcda; cursor:pointer;">open the 'Grid Maker'</span></span></span> <span id="chgclr"></span></p>
 					<div><p><button class='a' id="d2x2" onclick=d2x2()>2x2</button> <button id="d3x3" class='a' onclick=d3x3()>3x3</button> <button id="d4x4" class='a' onclick=d4x4()>4x4</button> <button id="d5x5" class='a' onclick=d5x5()>5x5</button> <button id="d6x6" class='a' onclick=d6x6()>6x6</button> <button id="d7x7" class='a' onclick=d7x7()>7x7</button> <button id="d8x8" class='a' onclick=d8x8()>8x8</button> <button id="customset" class='a' onclick=customset()>Custom</button></p></div>
-					<div id="custom_zone" style="height:15px;"><span id="customdim">Good Luck, Have Fun!</span><span id="customerr" style="color:#d24646;font-weight:bold;"></span></div>
+					<div id="custom_zone" style="height:15px;"><span id="customdim">Good Luck, Have Fun!</span><span id="customerr" class="customerr"></span></div>
 					<div id="credits" class="credits">
 						<h4>Created by Tudor Tarniceru</h4>
 					</div>
