--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<li class="active"><a>Tudor Tarniceru</a></li>
 					<li class="item"><a href="switch/index.html">Switch</a></li>
 					<li class="item"><a href="inrows/index.html">InRows</a></li>
-					<li class="item menuright" style="float:right;"><a href="blog/index.html">Blog<sup style="font-size:10px;color:yellow;">New</sup></a></li>
+					<li class="item menuright" style="float:right;"><a href="blog/index.html">Blog Template</a></li>
 					<li class="mm item menuright dropdown" style="float:right;"><a>Color Schemes</a> <div id="color_scheme_list" class="dropdown-content"> </div> </li>
 				</ul>
 			</div>
@@ -36,7 +36,7 @@
 				</div>
 				<br>
 				<div class="showcase" id="blog" style="width:635px;">
-					<div class="play"><p><a href="blog/index.html">Visit the Blog</a></p></div>
+					<div class="play"><p><a href="blog/index.html">Visit the Blog Template</a></p></div>
 				</div>
 			</div>
 			</center>
