--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 					<li class="active"><a>Tudor Tarniceru</a></li>
 					<li class="item"><a href="switch/index.html">Switch</a></li>
 					<li class="item"><a href="inrows/index.html">InRows</a></li>
-					<li class="item menuright" style="float:right;"><a href="blog/index.html">Blog Template</a></li>
+					<li class="item" style="float:right;"><a href="blog/index.html">Blog Template</a></li>
+					<li class="item menuright" style="float:right;"><a href="sudoku/index.html">Sudoku Solver</a></li>
 					<li class="mm item menuright dropdown" style="float:right;"><a>Color Schemes</a> <div id="color_scheme_list" class="dropdown-content"> </div> </li>
 				</ul>
 			</div>
@@ -37,6 +38,10 @@
 				<br>
 				<div class="showcase" id="blog" style="width:635px;">
 					<div class="play"><p><a href="blog/index.html">Visit the Blog Template</a></p></div>
+				</div>
+				<br>
+				<div class="showcase" id="sudoku" style="width:635px;">
+					<div class="play"><p><a href="sudoku/index.html">Sudoku Solver</a></p></div>
 				</div>
 			</div>
 			</center>
