--- a/switch/index.html
+++ b/switch/index.html
@@ -473,7 +473,8 @@
 					<li class="mm item"><a href="../index.html">Tudor Tarniceru</a></li>
 					<li class="mm active"><a>Switch</a></li>
 					<li class="mm item"><a href="../inrows/index.html">InRows</a></li>
-					<li class="mm item menuright" style="float:right;"><a href="../blog/index.html">Blog Template</a></li>
+					<li class="item" style="float:right;"><a href="../blog/index.html">Blog Template</a></li>
+					<li class="item menuright" style="float:right;"><a href="../sudoku/index.html">Sudoku Solver</a></li>
 					<li class="mm item menuright dropdown" style="float:right;"><a>Color Schemes</a> <div id="color_scheme_list" class="dropdown-content"> </div> </li>
 				</ul>
 			</div>
