--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -30,7 +30,7 @@
                 <div id="controls" class="controls">
                     <textarea id="input_values" class="input_area" rows="8" cols="16"></textarea>
                     <br>
-                    <span class="text_status">Good: <span id="ok"></span></span><br>
+                    <span class="text_status">Valid Table: <span id="ok"></span></span><br>
                     <div class="buttons">
                         <button type="button" class="a" onclick="get_values()">Import to Table</button><br>
                         <button type="button" class="a" onclick="solve()">Solve Table</button><br>
