Rename Home Page

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -16,7 +16,7 @@
         <center>
             <div style="background-color:black">
                 <ul>
-                        <li class="item"><a href="../index.html">Tudor Tarniceru</a></li>
+                        <li class="item"><a href="../index.html">Home</a></li>
                         <li class="item"><a href="../switch/index.html">Switch</a></li>
                         <li class="item"><a href="../inrows/index.html">InRows</a></li>
                         <li class="item" style="float:right;"><a href="../blog/index.html">Blog Template</a></li>
