--- a/inrows/index.html
+++ b/inrows/index.html
@@ -493,7 +493,7 @@
 		<center>
 			<div>
 				<ul class="mm">
-					<li class="mm item"><a href="../index.html">Tudor Tarniceru</a></li>
+					<li class="mm item"><a href="../index.html">Home</a></li>
 					<li class="mm item"><a href="../switch/index.html">Switch</a></li>
 					<li class="mm active"><a>InRows</a></li>
 					<li class="item" style="float:right;"><a href="../blog/index.html">Blog Template</a></li>
