--- a/switch/index.html
+++ b/switch/index.html
@@ -470,7 +470,7 @@
 		<center>
 			<div>
 				<ul class="mm">
-					<li class="mm item"><a href="../index.html">Tudor Tarniceru</a></li>
+					<li class="mm item"><a href="../index.html">Home</a></li>
 					<li class="mm active"><a>Switch</a></li>
 					<li class="mm item"><a href="../inrows/index.html">InRows</a></li>
 					<li class="item" style="float:right;"><a href="../blog/index.html">Blog Template</a></li>
